# object_detect_nav

./: CMakeLists.txt  README.md  config.cpp  config.h  kinectreader.cpp  kinectreader.h  readKinect.cpp  test.cpp
cmake_modules/: FindOpenNI.cmake  FindOpenNI.cmake~
config/: default.yaml  default.yaml~
